<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText android:id="@+id/etNumber" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/route_number" android:inputType="number" />
        <EditText android:id="@+id/etDesc" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:hint="@string/route_desc" />
        <EditText android:id="@+id/etDate" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:hint="@string/added_date" android:focusable="false" android:clickable="true" />

        <Button android:id="@+id/btnTakePhoto" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:text="Сделать фото камерой" android:backgroundTint="#4CAF50"/>
        <Button android:id="@+id/btnPickImage" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/select_photo" />

        <ImageView android:id="@+id/ivPreview" android:layout_width="match_parent" android:layout_height="200dp" android:layout_marginTop="10dp" android:scaleType="centerCrop" android:visibility="gone" />

        <Button android:id="@+id/btnSave" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/save" />
        <Button android:id="@+id/btnShare" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="Поделиться" android:backgroundTint="#2196F3" />
        <Button android:id="@+id/btnDelete" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/delete" android:backgroundTint="#FF5252" android:visibility="gone" />
    </LinearLayout>
</ScrollView>